# volume-data-converter

./: .gitattributes  .gitignore  README.md  image_process_helper.py  osom_grid4_mindep_smlp_mod7.nc  prepare-files.py  pyproject.toml  requirements.txt  tiff-2-png-converter.py
data_converter/: tiff_2_png_converter.py
erddap_data/: configuration.json  erddap_configuration.json  erddap_query.py
osom_converter/: constants.json  create_volume_viewer_data.py
raw_2_tiff/: raw_2_tiff_converter.py
tiff_2_png/: image_process_helper.py  prepare_files.py  tiff_2_png_converter.py
tiffs/: temp_ocean_his_0365_timestep160000.tif  temp_ocean_his_0365_timestep160001.tif  temp_ocean_his_0365_timestep160002.tif  temp_ocean_his_0365_timestep160003.tif  temp_ocean_his_0365_timestep160004.tif  temp_ocean_his_0365_timestep160005.tif  temp_ocean_his_0365_timestep160006.tif  temp_ocean_his_0365_timestep160007.tif  temp_ocean_his_0365_timestep160008.tif  temp_ocean_his_0365_timestep160009.tif  temp_ocean_his_0365_timestep160010.tif  temp_ocean_his_0365_timestep160011.tif  temp_ocean_his_0365_timestep160012.tif  temp_ocean_his_0365_timestep160013.tif  temp_ocean_his_0365_timestep160014.tif  temp_ocean_his_0365_timestep160015.tif  temp_ocean_his_0365_timestep160016.tif  temp_ocean_his_0365_timestep160017.tif  temp_ocean_his_0365_timestep160018.tif  temp_ocean_his_0365_timestep160019.tif  temp_ocean_his_0365_timestep160020.tif  temp_ocean_his_0365_timestep160021.tif  temp_ocean_his_0365_timestep160022.tif  temp_ocean_his_0365_timestep160023.tif  temp_ocean_his_0365_timestep160024.tif  temp_ocean_his_0365_timestep160025.tif  temp_ocean_his_0365_timestep160026.tif  temp_ocean_his_0365_timestep160027.tif  temp_ocean_his_0365_timestep160028.tif  temp_ocean_his_0365_timestep160029.tif  temp_ocean_his_0365_timestep160030.tif  temp_ocean_his_0365_timestep160031.tif  temp_ocean_his_0365_timestep160032.tif  temp_ocean_his_0365_timestep160033.tif  temp_ocean_his_0365_timestep160034.tif  temp_ocean_his_0365_timestep160035.tif  temp_ocean_his_0365_timestep160036.tif  temp_ocean_his_0365_timestep160037.tif  temp_ocean_his_0365_timestep160038.tif  temp_ocean_his_0365_timestep160039.tif  (+15 more)
volume_data_converter/: .gitattributes  conver_to_8_bit.py  create_volume_viewer_data.py  erddap_query.py  raw_2_tiff_converter.py  scoord_du_new2.py  stretching.py  tiff_2_png_converter.py
volume_data_converter/config/: constants.json  erddap_configuration.json
(+2 files in other folders)
