[tool.poetry]
name = "tiff-volume-2-png"
version = "0.1.0"
description = "Tool to convert tiff stack of images to a png texture map"
authors = ["Your Name <you@example.com>"]
license = "Brown University"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-contrib-python = "4.5.4.60"
black = "^22.3.0"
tiffile = "^2018.10.18"
pyseq = "^0.5.5"
scipy = "1.7.3"
typer = "^0.4.1"
imagesize = "^1.3.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
