[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "volume_data_converter"
version = "0.1.0"
description = "Tool to convert stack of tiff images to a png texture map"
authors = ["Camilo Diaz <camilo_diaz@brown.edu>"]
license = "MIT"

packages = [
    { include = "volume_data_converter" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
opencv-contrib-python = "4.5.4.60"
tiffile = "^2018.10.18"
pyseq = "^0.5.5"
scipy = "1.7.3"
typer = "^0.4.1"
imagesize = "^1.3.0"
matplotlib = "^3.5.1"
netCDF4 = "1.5.7"
mplhep = "^0.3.26"
imageio = "^2.21.1"
Pillow = "^9.2.0"
pypng = "^0.20220715.0"
numpy = "1.22"
erddapy = "^1.2.1"
xarray = "^2022.6.0"
halo = "^0.0.31"
importlib-resources = "^5.9.0"
cftime = "^1.6.2"



[tool.poetry.dev-dependencies]
black = "^22.3.0"
autopep8 = "^1.7.0"

[tool.poetry.scripts]
convert2png = "volume_data_converter.tiff_2_png_converter:main"
raw2tiff = "volume_data_converter.raw_2_tiff_converter:main"
osom_converter = "volume_data_converter.create_volume_viewer_data:main"
erdapp-query = "volume_data_converter.erddap_query:main"

